Add model prediction function

--- a/notebooks/03-BERT-DocumentClassification.ipynb
+++ b/notebooks/03-BERT-DocumentClassification.ipynb
@@ -4904,7 +4904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -4912,7 +4912,64 @@
      "output_type": "stream",
      "text": [
       "Generating sentence embeddings for all 115,864 comments...\n",
-      "  Comment   2,000  of  115,864.    Elapsed: 0:02:19. Remaining: 2:11:40\n"
+      "  Comment   2,000  of  115,864.    Elapsed: 0:02:19. Remaining: 2:11:40\n",
+      "  Comment   4,000  of  115,864.    Elapsed: 0:04:33. Remaining: 2:07:08\n",
+      "  Comment   6,000  of  115,864.    Elapsed: 0:06:58. Remaining: 2:07:35\n",
+      "  Comment   8,000  of  115,864.    Elapsed: 0:09:09. Remaining: 2:03:21\n",
+      "  Comment  10,000  of  115,864.    Elapsed: 0:11:21. Remaining: 2:00:08\n",
+      "  Comment  12,000  of  115,864.    Elapsed: 0:13:48. Remaining: 1:59:31\n",
+      "  Comment  14,000  of  115,864.    Elapsed: 0:16:10. Remaining: 1:57:40\n",
+      "  Comment  16,000  of  115,864.    Elapsed: 0:18:21. Remaining: 1:54:34\n",
+      "  Comment  18,000  of  115,864.    Elapsed: 0:20:33. Remaining: 1:51:45\n",
+      "  Comment  20,000  of  115,864.    Elapsed: 0:22:44. Remaining: 1:48:57\n",
+      "  Comment  22,000  of  115,864.    Elapsed: 0:24:54. Remaining: 1:46:13\n",
+      "  Comment  24,000  of  115,864.    Elapsed: 0:27:16. Remaining: 1:44:21\n",
+      "  Comment  26,000  of  115,864.    Elapsed: 0:29:29. Remaining: 1:41:56\n",
+      "  Comment  28,000  of  115,864.    Elapsed: 0:31:44. Remaining: 1:39:36\n",
+      "  Comment  30,000  of  115,864.    Elapsed: 0:34:02. Remaining: 1:37:23\n",
+      "  Comment  32,000  of  115,864.    Elapsed: 0:36:21. Remaining: 1:35:15\n",
+      "  Comment  34,000  of  115,864.    Elapsed: 0:38:42. Remaining: 1:33:10\n",
+      "  Comment  36,000  of  115,864.    Elapsed: 0:40:54. Remaining: 1:30:45\n",
+      "  Comment  38,000  of  115,864.    Elapsed: 0:43:13. Remaining: 1:28:34\n",
+      "  Comment  40,000  of  115,864.    Elapsed: 0:45:36. Remaining: 1:26:29\n",
+      "  Comment  42,000  of  115,864.    Elapsed: 0:48:02. Remaining: 1:24:29\n",
+      "  Comment  44,000  of  115,864.    Elapsed: 0:50:19. Remaining: 1:22:10\n",
+      "  Comment  46,000  of  115,864.    Elapsed: 0:52:33. Remaining: 1:19:49\n",
+      "  Comment  48,000  of  115,864.    Elapsed: 0:54:38. Remaining: 1:17:15\n",
+      "  Comment  50,000  of  115,864.    Elapsed: 0:56:45. Remaining: 1:14:45\n",
+      "  Comment  52,000  of  115,864.    Elapsed: 0:58:54. Remaining: 1:12:20\n",
+      "  Comment  54,000  of  115,864.    Elapsed: 1:01:04. Remaining: 1:09:57\n",
+      "  Comment  56,000  of  115,864.    Elapsed: 1:03:13. Remaining: 1:07:34\n",
+      "  Comment  58,000  of  115,864.    Elapsed: 1:05:22. Remaining: 1:05:13\n",
+      "  Comment  60,000  of  115,864.    Elapsed: 1:07:26. Remaining: 1:02:47\n",
+      "  Comment  62,000  of  115,864.    Elapsed: 1:09:30. Remaining: 1:00:23\n",
+      "  Comment  64,000  of  115,864.    Elapsed: 1:11:36. Remaining: 0:58:01\n",
+      "  Comment  66,000  of  115,864.    Elapsed: 1:13:50. Remaining: 0:55:47\n",
+      "  Comment  68,000  of  115,864.    Elapsed: 1:16:06. Remaining: 0:53:34\n",
+      "  Comment  70,000  of  115,864.    Elapsed: 1:18:25. Remaining: 0:51:23\n",
+      "  Comment  72,000  of  115,864.    Elapsed: 1:20:44. Remaining: 0:49:11\n",
+      "  Comment  74,000  of  115,864.    Elapsed: 1:22:58. Remaining: 0:46:56\n",
+      "  Comment  76,000  of  115,864.    Elapsed: 1:25:04. Remaining: 0:44:37\n",
+      "  Comment  78,000  of  115,864.    Elapsed: 1:27:12. Remaining: 0:42:20\n",
+      "  Comment  80,000  of  115,864.    Elapsed: 1:29:16. Remaining: 0:40:01\n",
+      "  Comment  82,000  of  115,864.    Elapsed: 1:31:22. Remaining: 0:37:44\n",
+      "  Comment  84,000  of  115,864.    Elapsed: 1:33:33. Remaining: 0:35:29\n",
+      "  Comment  86,000  of  115,864.    Elapsed: 1:35:50. Remaining: 0:33:17\n",
+      "  Comment  88,000  of  115,864.    Elapsed: 1:38:06. Remaining: 0:31:04\n",
+      "  Comment  90,000  of  115,864.    Elapsed: 1:40:16. Remaining: 0:28:49\n",
+      "  Comment  92,000  of  115,864.    Elapsed: 1:42:28. Remaining: 0:26:35\n",
+      "  Comment  94,000  of  115,864.    Elapsed: 1:44:34. Remaining: 0:24:19\n",
+      "  Comment  96,000  of  115,864.    Elapsed: 1:46:38. Remaining: 0:22:04\n",
+      "  Comment  98,000  of  115,864.    Elapsed: 1:48:46. Remaining: 0:19:50\n",
+      "  Comment 100,000  of  115,864.    Elapsed: 1:50:56. Remaining: 0:17:36\n",
+      "  Comment 102,000  of  115,864.    Elapsed: 1:53:10. Remaining: 0:15:23\n",
+      "  Comment 104,000  of  115,864.    Elapsed: 1:55:23. Remaining: 0:13:10\n",
+      "  Comment 106,000  of  115,864.    Elapsed: 1:57:34. Remaining: 0:10:56\n",
+      "  Comment 108,000  of  115,864.    Elapsed: 1:59:40. Remaining: 0:08:43\n",
+      "  Comment 110,000  of  115,864.    Elapsed: 2:01:57. Remaining: 0:06:30\n",
+      "  Comment 112,000  of  115,864.    Elapsed: 2:04:19. Remaining: 0:04:17\n",
+      "  Comment 114,000  of  115,864.    Elapsed: 2:06:41. Remaining: 0:02:04\n",
+      "Wall time: 2h 8min 59s\n"
      ]
     }
    ],
@@ -4962,9 +5019,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vector shape: (115864, 768)\n",
+      "Saving embeddings to: ./model_save/embeddings.npy\n"
+     ]
+    }
+   ],
    "source": [
     "# Convert the list of vectors into a 2D array.\n",
     "vecs = np.stack(embeddings)\n",
@@ -4999,7 +5065,9 @@
     "\n",
     "### 8.1. k-NN with FAISS and GPU\n",
     "\n",
-    "To create a GPU index with FAISS, you first create it on the CPU, then copy it over."
+    "To create a GPU index with FAISS, you first create it on the CPU, then copy it over.\n",
+    "\n",
+    "Note: Following is for unix only (faiss-cpu is not supported on windows)"
    ]
   },
   {
@@ -5008,7 +5076,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install faiss faiss-gpu"
+    "!pip install faiss-cpu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install faiss-gpu"
    ]
   },
   {
@@ -5163,18 +5240,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Acknowledgements:\n",
+    "* Chris McCormick  \n",
+    "`BERT Document Classification` https://www.youtube.com/watch?v=_eSGWNqKeeY"
+   ]
   }
  ],
  "metadata": {
