Add section for false positives and false negatives

--- a/notebooks/03-BERT-DocumentClassification.ipynb
+++ b/notebooks/03-BERT-DocumentClassification.ipynb
@@ -2499,7 +2499,8 @@
    "source": [
     "### Test Predictions Dataframe\n",
     "\n",
-    "[pred_0] high confidence for label 0 and low confidence for label 1)"
+    "`pred_0` describes confidence for `label 0` (no attack)  \n",
+    "`pred_1` describes confidence for `label 1` (attack)"
    ]
   },
   {
@@ -2627,8 +2628,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prediction Verification: `False Positives`\n",
+    "\n",
+    "Filtering test dataset for `non-attacks`, then sort observations by the highest `attack` prediction."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -2715,51 +2725,6 @@
        "      <td>-3.799661</td>\n",
        "      <td>3.624119</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>236375231</th>\n",
-       "      <td>== Epic ==  I just watched this guy on TED, ...</td>\n",
-       "      <td>test</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-3.782183</td>\n",
-       "      <td>3.536613</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54363909</th>\n",
-       "      <td>== hi ==  can you and your kind stop threate...</td>\n",
-       "      <td>test</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-3.519486</td>\n",
-       "      <td>3.176985</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>526607334</th>\n",
-       "      <td>== WIDR'S P3N15 ==  TWO WORDS  SMALL AS F***</td>\n",
-       "      <td>test</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-3.453529</td>\n",
-       "      <td>3.168572</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75795035</th>\n",
-       "      <td>I am still a stupid wanker</td>\n",
-       "      <td>test</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-3.366721</td>\n",
-       "      <td>3.034502</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>59774584</th>\n",
-       "      <td>== Isn't that a bit lame? ==  Your just a mo...</td>\n",
-       "      <td>test</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-3.333953</td>\n",
-       "      <td>3.012072</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -2772,11 +2737,6 @@
        "219083610                        == Lick me ==  are u horny?  test   False   \n",
        "416308072    == IDIOT BYTCH ==  Once again, I only have 1...  test   False   \n",
        "74200889     ==Ban this vandal== http://en.wikipedia.org/...  test   False   \n",
-       "236375231    == Epic ==  I just watched this guy on TED, ...  test   False   \n",
-       "54363909     == hi ==  can you and your kind stop threate...  test   False   \n",
-       "526607334       == WIDR'S P3N15 ==  TWO WORDS  SMALL AS F***  test   False   \n",
-       "75795035                          I am still a stupid wanker  test   False   \n",
-       "59774584     == Isn't that a bit lame? ==  Your just a mo...  test   False   \n",
        "\n",
        "           true_labels    pred_0    pred_1  \n",
        "rev_id                                      \n",
@@ -2784,43 +2744,216 @@
        "45024750             0 -4.063657  3.941936  \n",
        "219083610            0 -4.116485  3.932616  \n",
        "416308072            0 -4.060067  3.929109  \n",
-       "74200889             0 -3.799661  3.624119  \n",
-       "236375231            0 -3.782183  3.536613  \n",
-       "54363909             0 -3.519486  3.176985  \n",
-       "526607334            0 -3.453529  3.168572  \n",
-       "75795035             0 -3.366721  3.034502  \n",
-       "59774584             0 -3.333953  3.012072  "
+       "74200889             0 -3.799661  3.624119  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dx[dx.attack == False].sort_values('pred_1', ascending=False).head(10)"
+    "fp = dx[dx.attack == False].sort_values('pred_1', ascending=False)\n",
+    "fp.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False Positive: 0 \n",
+      " `  == Yo there! ==  You are a useless and fucking douchebag. Go fuck yourself, you are a disgrace to wikipedia!!!!  YOU, SIR, ARE A BALLSACK!  You think you are so much smarter than everyone else!  Why do you think you are so smart!  I wish you would leave the Wikipedia!  I can't stand the way you B \n",
+      "\n",
+      "False Positive: 1 \n",
+      "   == Cause of Death ==  Fuck exicution, put down Murder was the mutha fuckin' case, and Shawtnegger was tha murdera! \n",
+      "\n",
+      "False Positive: 2 \n",
+      "   == Lick me ==  are u horny? \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(3):\n",
+    "    print('False Positive:', i, '\\n', fp.comment.values[i][:300], '\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This reveals that a lot the false-positives are actually incorrectly labeled, and the model is predicting them as it is supposed to."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prediction Verification: `False Negatives`\n",
+    "Text which is labelled as `attack`, but the model predicts as `safe`"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>comment</th>\n",
+       "      <th>split</th>\n",
+       "      <th>attack</th>\n",
+       "      <th>true_labels</th>\n",
+       "      <th>pred_0</th>\n",
+       "      <th>pred_1</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>rev_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>687661161</th>\n",
+       "      <td>`  ==Request to get 2015–16 Heart of Midlothia...</td>\n",
+       "      <td>test</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.447719</td>\n",
+       "      <td>-4.986903</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67084641</th>\n",
+       "      <td>== You only want what YOU feel is important ...</td>\n",
+       "      <td>test</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.441694</td>\n",
+       "      <td>-5.014874</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>459346236</th>\n",
+       "      <td>`  == Unwarranted block ==  Please explain why...</td>\n",
+       "      <td>test</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.424231</td>\n",
+       "      <td>-4.975465</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>201181539</th>\n",
+       "      <td>== Wow... ==  This page is so awful. It has ...</td>\n",
+       "      <td>test</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.417169</td>\n",
+       "      <td>-4.972826</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67950017</th>\n",
+       "      <td>Yeah, yeah you are definately narrow minded....</td>\n",
+       "      <td>test</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.404196</td>\n",
+       "      <td>-4.933738</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                     comment split  attack  \\\n",
+       "rev_id                                                                       \n",
+       "687661161  `  ==Request to get 2015–16 Heart of Midlothia...  test    True   \n",
+       "67084641     == You only want what YOU feel is important ...  test    True   \n",
+       "459346236  `  == Unwarranted block ==  Please explain why...  test    True   \n",
+       "201181539    == Wow... ==  This page is so awful. It has ...  test    True   \n",
+       "67950017     Yeah, yeah you are definately narrow minded....  test    True   \n",
+       "\n",
+       "           true_labels    pred_0    pred_1  \n",
+       "rev_id                                      \n",
+       "687661161            1  5.447719 -4.986903  \n",
+       "67084641             1  5.441694 -5.014874  \n",
+       "459346236            1  5.424231 -4.975465  \n",
+       "201181539            1  5.417169 -4.972826  \n",
+       "67950017             1  5.404196 -4.933738  "
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fn = dx[dx.attack == True].sort_values('pred_0', ascending=False)\n",
+    "fn.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Flase Negative: 0 \n",
+      " `  ==Request to get 2015–16 Heart of Midlothian F.C. season &  deleted==  & . The article being well sourced is irrelevant. I added all those sources, I added all the content. I updated it every week. I am the main contributor and creator of the article. The point is people just aren't interested in updating these article. I will not be updating or editing at all any further. I can assure you that if you look at previous season article for the whole of Scottish football you will see the same pattern. It will be an outdated mess within weeks.   Does Wikipedia support having stale content. Does wikipedia refuse the right of people to have there own user pages deleted such as this . It is ridiculous to refuse this request. I fully intend to fight this in every way possible & I mean anyway possible. Wikipedia is a joke that just doesn't care about content, it cares about protecting itself and editors like .  ` \n",
+      "\n",
+      "Flase Negative: 1 \n",
+      "   == You only want what YOU feel is important to be added?  You must be G.W.'s friend. ==  This editor does not feel that ALL the facts should be present in articles.  Does that sound like a smart editor?  (cur) (last)  2nd Piston Honda (Talk | contribs) (so ALL facts belong in the article?)  (cur) (last)  Playnine9 (Talk | contribs) m (it is a FACT, that's why it belongs. Explain to me why it DOESN'T belong.)   YES, ALL OF THE FACTS BELONG, YOU MORON!  Oh, and Hondas are slow. \n",
+      "\n",
+      "Flase Negative: 2 \n",
+      " `  == Unwarranted block ==  Please explain why you blocked  for the reason ``Continued abuse after block expired``, when in fact only one edit was made after the block expired, which was a spelling correction.   ` \n",
+      "\n",
+      "Flase Negative: 3 \n",
+      "   == Wow... ==  This page is so awful. It has some decent information but it looks like a 12 year old wrote a C grade essay. I'd like to get some people to help me fix it up.    \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(4):\n",
+    "    print('Flase Negative:', i, '\\n', fn.comment.values[i][:1000], '\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These are the difficult edge cases which the model incorrectly predicts as `non-attacks`."
+   ]
   },
   {
    "cell_type": "code",
@@ -2833,8 +2966,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These first ten examples all look correct (high confidence for label 0 and low confidence for label 1)! Let's see how we did on the full test set.\n",
-    "\n",
     "The accuracy metric chosen by the authors for this dataset is the \"ROC AUC\" (Receiver Operating Characteristic, Area Under the Curve) rather than straight accuracy (number right / total examples).\n",
     "\n",
     "*ROC AUC*\n",
@@ -2848,7 +2979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -2856,7 +2987,7 @@
      "output_type": "stream",
      "text": [
       "Test ROC AUC: 0.971\n",
-      "Wall time: 377 ms\n"
+      "Wall time: 63.1 ms\n"
      ]
     }
    ],
