Add BERT introduction.

--- a/notebooks/03-BERT-DocumentClassification.ipynb
+++ b/notebooks/03-BERT-DocumentClassification.ipynb
@@ -5,18 +5,26 @@
    "metadata": {},
    "source": [
     "# BERT Document Classification\n",
-    "* Bidirectional Encoding Representations from Transformers\n",
     "\n",
-    "## Wikipedia Personal Attack / Offensive Language `Classification`\n",
+    "This notebook uses `BERT` (Bidirectional Encoding Representations from Transformers) to train a classifier on the `Wikipeida Offensive Language` dataset. The input is the pre-trained `BERT` model, and the wikipedia dataset. The output is a classification target of whether the text is a personal attack or not. \n",
     "\n",
-    "The data set includes over 100k labeled discussion comments from English Wikipedia. Each comment was labeled by multiple annotators via Crowdflower on whether it contains a personal attack. There also contains demographic data for each crowd-worker.\n",
+    "### Wikipedia Personal Attack / Offensive Language `Classification`\n",
+    "\n",
+    "The dataset includes over 100k labeled discussion comments from English Wikipedia. Each comment was labeled by multiple annotators via Crowdflower on whether it contains a personal attack. There also contains demographic data for each crowd-worker.\n",
     "\n",
     "* `attack_annotated_comments.tsv` contains the comment text and some properties.\n",
     "* `attack_annotations.tsv` contains the labels (whether the comment contains an attack).\n",
     "\n",
+    "### Illustration of BERT Transfer Learning \n",
+    "* The two steps of how BERT is developed ([Source: Jay Allamar](http://jalammar.github.io/illustrated-bert/))\n",
     "\n",
-    "Set up environment:\n",
+    "![BERT Transfer Learning](http://jalammar.github.io/images/bert-transfer-learning.png)  \n",
+    "  \n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Set up Environment\n",
     "___\n",
     "\n",
     "```\n",
@@ -29,6 +37,7 @@
     "> pip install transformers scikit-learn keras tqdm ipywidgets\n",
     "> pip install -U jupyter\n",
     "```\n",
+    "___\n",
     "\n",
     "Continue with imports:"
    ]
